--- a/src/packagekit-qt2.pc.in
+++ b/src/packagekit-qt2.pc.in
@@ -6,6 +6,6 @@ includedir=${prefix}/include
 Name: packagekit-qt2
 Description: PackageKit is a system daemon for installing stuff.
 Version: @VERSION@
-Requires: QtCore, QtDBus, QtSql, QtXml
+Requires: @PKGCONFIG_REQUIRES@
 Libs: -L${libdir} -lpackagekit-qt2
 Cflags: -I${includedir}/PackageKit/packagekit-qt2
